// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component should match snapshots 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c0:hover,
.c0:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea component should match snapshots 2`] = `
.c0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  min-height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c0:hover,
.c0:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c0[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

<textarea
  className="c0"
  value="foo"
/>
`;
